# criterion_gettingstarted

./: Cargo.toml  README.md
.github/workflows/: bench.yml
benches/: flamegraph.rs  my_benchmark.rs
docs/: fib 20 - fast  fib 20 - slow  fib20-fast  fib20-slow  fib20fast  fib20slow  index.html  report
docs/fib 20 - fast/base/: tukey.json
docs/fib 20 - fast/change/: estimates.json
docs/fib 20 - fast/new/: sample.json
docs/fib 20 - slow/base/: benchmark.json  raw.csv
docs/fib 20 - slow/new/: tukey.json
docs/fib 20 - slow/report/: index.html
docs/fib20-fast/base/: benchmark.json  tukey.json
docs/fib20-fast/change/: estimates.json
docs/fib20-fast/new/: estimates.json  raw.csv  sample.json
docs/fib20-fast/report/: index.html
docs/fib20-slow/base/: benchmark.json  estimates.json  tukey.json
docs/fib20-slow/change/: estimates.json
docs/fib20-slow/new/: raw.csv  sample.json
docs/fib20-slow/report/: index.html
docs/fib20fast/base/: tukey.json
docs/fib20fast/change/: estimates.json
docs/fib20fast/new/: benchmark.json  estimates.json  raw.csv  sample.json
docs/fib20fast/report/: index.html
docs/fib20slow/base/: benchmark.json  estimates.json  sample.json
docs/fib20slow/change/: estimates.json
docs/fib20slow/new/: raw.csv  tukey.json
docs/fib20slow/report/: index.html
src/: lib.rs
