[package]
name = "criterion_gettingstarted"
version = "0.1.0"
authors = ["Julia Evans <julia@jvns.ca>"]
edition = "2018"

[features]
html_reports = []
csv_output = []

[dev-dependencies]
criterion = "0.3"
criterion-macro = "0.3.4"
flamegraph = "0.4.0"
pprof = { version = "0.3", features = ["flamegraph"]}

# Getting started sample
#[[bench]]
#name = "my_benchmark"
#harness = false

# https://www.jibbow.com/posts/criterion-flamegraphs/
[[bench]]
name = "flamegraph"
harness = false